# masters

./: .gitignore  AUTHORS  CMakeLists.txt  LICENSE  README.md  build_armadillo.sh  compile_ARCHER.sh  compile_HECTOR.sh  link_ARCHER.sh  prepare_ARCHER  prepare_HECTOR  prepare_HECTOR.sh  submit_HECTOR.sh
C/: CMakeLists.txt  Doxyfile.in  bootstrap.sh  helpers.cpp  helpers.h  integrator.cpp  plot.gnuplot
C/include/: Base.hpp  Computer.hpp  Integrator.hpp  Serializer.hpp  exceptions.hpp  helpers.hpp  test_integrators.hpp
C/include/computers/: DecayMultirunComputer.hpp  DecayPathComputer.hpp  MultirunComputer.hpp  SimpleComputer.hpp
C/include/serializers/: ComponentSerializer.hpp  GenericSerializer.hpp  NormSerializer.hpp
C/include/serialzers/: NormSerializer.hpp
C/src/: Base.cpp  Computer.cpp  Integrator.cpp  Serializer.cpp  helpers.cpp  integrator.cpp  test-suite.cpp  test_integrators.cpp
C/src/computers/: DecayMultirunComputer.cpp  DecayPathComputer.cpp  MultirunComputer.cpp  SimpleComputer.cpp
C/src/serializers/: ComponentSerializer.cpp  GenericSerializer.cpp  NormSerializer.cpp
C/submitter/: integrator  submitter.py
contrib/fftw_avg/: fft_avg.py
contrib/plot_decay/: a1_exp_fit.py  a1_mult.py  dump_params.py  get_dims.py  params.py  plot.py  plot2.py  requirements.txt  surv_prob_plot.py
contrib/submit_builder/: builder.py  scaffold-archer.tpl  scaffold.tpl
include/: Base.hpp  Computer.hpp  Integrator.hpp  Jacobian.hpp  JacobianElement.hpp  Searcher.hpp  Serializer.hpp  WriteCheck.hpp  exceptions.hpp  helpers.hpp
include/computers/: DecayMultirunComputer.hpp  DecayPathComputer.hpp  MultirunComputer.hpp  SimpleComputer.hpp
include/integrators/: PaperIntegrator.hpp  PolymerIntegrator.hpp
include/searchers/: CMASimple.hpp  FireflySimple.hpp  NoTauSimple.hpp  SimpleSearcher.hpp
include/serializers/: ComponentSerializer.hpp  GenericSerializer.hpp
python/: .gitignore  .swp  integrator.py  test.py
src/: Base.cpp  Computer.cpp  Integrator.cpp  Jacobian.cpp  JacobianElement.cpp  Searcher.cpp  helpers.cpp  integrator.cpp  test_integrators.cpp
src/computers/: DecayMultirunComputer.cpp  DecayPathComputer.cpp  MultirunComputer.cpp  SimpleComputer.cpp
src/integrators/: PaperIntegrator.cpp  PolymerIntegrator.cpp
src/searchers/: CMASimple.cpp  FireflySimple.cpp  NoTauSimple.cpp  SimpleSearcher.cpp
src/serializers/: ComponentSerializer.cpp  GenericSerializer.cpp  NormSerializer.cpp
submitter/: errlog  submitter.py
